tests/fixtures/original-compiler/passing/RecordRowTypeAlias.js
export const unsafeCoerce = function(x) { return x; };
