tests/fixtures/original-compiler/failing/Rank2Types.js
export const test = (f) => f(0);
